@@ -1,3 +1,8 @@
+2011-02-07  Sancho Lerena <slerena@artica.es>
+
+	* operation/agentes/estado_generalagente.php: Show description in GIS information
+	if description is available, if not, GPS coordinates.
+
 2011-02-03 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* operation/search_alerts.php: Actions_name array now is initialized to void value.
